fix: hide animation overlay scrollbar

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ h1{
     width: 100vw;
     height: 100vh;
 
-    overflow: auto;
+    overflow-x: hidden;
 
     padding: 16px;
 
